--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -322,6 +322,29 @@ $article-share-link
     display: block
     max-width: 100%
     margin: 0 auto
+
+    /*toc*/
+.toc-article
+  background #eee
+  border 1px solid #bbb
+  border-radius 10px
+  margin auto
+  padding 1.2em 1em 0 1em
+  max-width 100%
+.toc-title
+  font-size 120%
+#toc
+  line-height 1em
+  font-size 0.9em
+  float right
+  .toc
+    padding 0
+    margin 1em
+    line-height 1.8em
+    li
+      list-style-type none
+  .toc-child 
+    margin-left 1em
 /*
 $article-gallery-ctrl
   position: absolute
