--- a/themes/landscape/layout/_partial/article.ejs
+++ b/themes/landscape/layout/_partial/article.ejs
@@ -19,10 +19,13 @@
           </p>
         <% } %>
       <% } else { %>
+        <!-- 文章目录 -->
+    <% if (!index && post.toc){ %>
       <div id="toc" class="toc-article">
           <strong class="toc-title">文章目录</strong>
-          <%- toc(post.content) %>
-        </div>
+          <%- toc(post.content, {list_number: false}) %>
+      </div>
+      <% } %>
         <%- post.content %>
       <% } %>
     </div>
