--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -325,50 +325,29 @@ $article-share-link
 
 /*toc*/
 .toc-article
-background #eeeeee
-margin 2em 0 0 0.2em
-padding 1em
-border-radius 5px
-.toc-title
-  font-size 120%
-strong
-  padding 0.3em 1
-ol.toc
-  width 100%
-  margin 1em 2em 0 0
+  background #eee
+  border 1px solid #bbb
+  border-radius 10px
+  margin 1.5em 0 0.3em 1.5em
+  padding 1.2em 1em 0 1em
+  max-width 28%
+  .toc-title
+    font-size 120%
 #toc
   line-height 1em
-  font-size 0.8em
+  font-size 0.9em
   float right
-  .toc
-    padding 0 
-    li
-      list-style-type none
-  .toc-child 
-    padding-left 0em
-#toc.toc-aside
-  display none
-  width 13%
-  position fixed
-  right 2%
-  top 320px
-  overflow hidden
-  line-height 1.5em
-  font-size 1em
-  color color-heading
-  opacity .6
-  transition opacity 1s ease-out
-  strong
-    padding 0.3em 0
-    color color-font
-  &:hover
-    transition opacity .3s ease-out
-    opacity 1
-  a
-    transition color 1s ease-out
-    &:hover
-      color color-theme
-      transition color .3s ease-out
+.toc
+  padding 0
+  margin 1em
+  line-height 1.8em
+  
+li
+  list-style-type none
+
+.toc-child 
+  margin-left 1em
+
 /*
 $article-gallery-ctrl
   position: absolute
