--- a/themes/landscape/layout/_partial/after-footer.ejs
+++ b/themes/landscape/layout/_partial/after-footer.ejs
@@ -14,8 +14,7 @@
 </script>
 <% } %>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
+<script src="https://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
 <% if (theme.fancybox){ %>
   <%- css('fancybox/jquery.fancybox') %>
   <%- js('fancybox/jquery.fancybox.pack') %>
