--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -33,7 +33,7 @@ line-height-title = 1.1em
 logo-size = 40px
 subtitle-size = 16px
 banner-height = 450px
-banner-url = "images/xiaolu.jepg"
+banner-url = "images/xiaolu.jpeg"
 
 sidebar = hexo-config("sidebar")
 
