--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -79,9 +79,11 @@
     padding: 10px 0
   blockquote
     font-family: font-serif
-    font-size: 1.4em
+    font-size: 16px
     margin: line-height 20px
-    text-align: center
+    text-align: left
+    background-color: #555
+    border-color: #222
     footer
       font-size: font-size
       margin: line-height 0
