--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -84,6 +84,7 @@
     text-align: left
     background-color: #555
     border-color: #222
+    border-left 6px solid #b4b4b4
     footer
       font-size: font-size
       margin: line-height 0
