--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -79,12 +79,11 @@
     padding: 10px 0
   blockquote
     font-family: font-serif
-    font-size: 16px
-    margin: line-height 20px
+    font-size: 14px
     text-align: left
-    background-color: #555
+    background-color: rgba(185, 184, 184, 0.3686274509803922)
     border-color: #222
-    border-left 6px solid #b4b4b4
+    border-left: 6px solid #b4b4b4
     footer
       font-size: font-size
       margin: line-height 0
